--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: ''
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://example.com/child' and root as '/child/'
-url: http://example.com
+url: http://alwaysherewithme.github.io/
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -33,7 +33,7 @@ skip_render:
 
 # Writing
 new_post_name: :title.md # File name of new posts
-default_layout: post
+default_layout: 
 titlecase: false # Transform title into titlecase
 external_link:
   enable: true # Open external links in new tab
@@ -103,4 +103,6 @@ theme: next
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: git
+  repo: https://github.com/Alwaysherewithme/Alwaysherewithme.github.io.git
+  branch: master
